--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -599,9 +599,20 @@
         div.className = 'bill-item';
         
         let linkHtml = '';
+        const links = [];
+
         if (item.link) {
             const isPdf = item.link.toLowerCase().endsWith('pdf');
-            linkHtml = `<div class="bill-links"><a href="${item.link}" target="_blank" class="doc-link">${isPdf ? 'PDF' : 'TEXT'}</a></div>`;
+            links.push(`<a href="${item.link}" target="_blank" class="doc-link">${isPdf ? 'PDF' : 'TEXT'}</a>`);
+        }
+
+        // Intelligence Brief button (only shows when analysis exists)
+        if (item.ai_analysis && item.ai_analysis.trim() !== "") {
+            links.push(`<a href="/analysis/?id=${item.id}" target="_blank" class="doc-link" style="background:#dcfce7; color:#166534;">INTELLIGENCE BRIEF</a>`);
+        }
+
+        if (links.length > 0) {
+            linkHtml = `<div class="bill-links">${links.join('')}</div>`;
         }
         
         // Bill Card always uses the standard item.timestamp
