--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 
         // 1. AI Button
         if (item.ai_analysis) {
-             buttonsHtml += `<a href="/analysis/?id=${item.id}" class="ai-link">⚡ INTELLIGENCE</a>`;
+             buttonsHtml += `<a href="/analysis/?id=${item.id}" class="ai-link">⚡ INTELLIGENCE REPORTS</a>`;
         }
 
         // 2. Doc Link
