--- a/analysis/index.html
+++ b/analysis/index.html
@@ -14,6 +14,22 @@
 </head>
 <body class="text-gray-800">
 
+  <!-- Top Halo Nav (added) -->
+  <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-black/5">
+    <div class="max-w-3xl mx-auto px-6 py-4 flex items-center justify-between">
+      <a href="/" class="font-extrabold text-blue-600 flex items-center gap-2" style="font-family: 'Merriweather', serif; letter-spacing:-0.5px;">
+        <span aria-hidden="true">🏛️</span> <span>The Capitol Wire</span>
+      </a>
+      <div class="flex items-center gap-4">
+        <a href="/dashboard/" class="text-sm font-medium text-slate-600 hover:text-blue-600">Dashboard</a>
+        <button class="text-sm font-semibold bg-blue-600 hover:bg-blue-900 text-white px-4 py-2 rounded-md" onclick="openModal()">
+          Get Notifications
+        </button>
+      </div>
+    </div>
+  </nav>
+
+
     <div class="bg-blue-900 text-white py-6 border-b-4 border-blue-800">
         <div class="max-w-3xl mx-auto px-6 text-center">
             <h1 class="text-2xl font-bold tracking-wide">🏛️ THE CAPITOL WIRE</h1>
@@ -78,17 +94,105 @@
                 </div>
             </div>
 
+            
+            <div class="mt-8 text-xs text-gray-400 leading-relaxed">
+                <span class="font-semibold text-gray-500">AI notice:</span>
+                This intelligence report is generated with AI and may contain errors or omissions. Please verify details against the official bill text and supporting documents.
+            </div>
+
             <div class="text-center pt-8 pb-12">
                 <a href="/" class="text-blue-600 hover:text-blue-800 font-semibold text-sm">← Back to Dashboard</a>
             </div>
         </div>
     </div>
 
+
+  <!-- Get Notifications Modal (added) -->
+  <div id="modal" class="hidden fixed inset-0 z-[60] items-center justify-center bg-slate-900/60 backdrop-blur-sm">
+    <div class="w-[92%] max-w-md rounded-2xl bg-white shadow-xl border border-slate-200 p-8 relative">
+      <button class="absolute right-4 top-4 text-slate-400 hover:text-slate-700 text-2xl leading-none" onclick="closeModal()" aria-label="Close">&times;</button>
+      <h3 class="text-xl font-bold text-slate-900" style="font-family:'Merriweather', serif;">Get Instant Alerts</h3>
+      <p class="mt-2 text-sm text-slate-600">Enter your email to get notified when the schedule or analysis updates.</p>
+      <input id="modal-email" type="email" placeholder="Enter your email" class="mt-5 w-full rounded-lg border border-slate-300 px-4 py-3 text-sm focus:outline-none focus:ring-2 focus:ring-blue-200 focus:border-blue-400" />
+      <button id="modal-submit" class="mt-3 w-full rounded-lg bg-gradient-to-br from-blue-600 to-blue-700 hover:from-blue-900 hover:to-blue-900 text-white font-semibold py-3 text-sm disabled:opacity-70 disabled:cursor-wait">
+        Subscribe Free
+      </button>
+      <div id="modal-status" class="mt-3 text-sm min-h-[20px]"></div>
+    </div>
+  </div>
+
     <script>
         const SUPABASE_URL = 'https://jcrsdyyqrbtxyzhveszx.supabase.co';
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpjcnNkeXlxcmJ0eHl6aHZlc3p4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYxNzIzOTYsImV4cCI6MjA4MTc0ODM5Nn0.FzTqjfTSDsz4MnLKNHlPcXdyR53UvnOmkV0bjZSbCGw'; 
 
         const client = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        // Separate publishable key used on the site for subscriber inserts (matches other pages)
+        const SUBSCRIBE_KEY = "sb_publishable_oQOSOkFpJAPfmnINrAYYUg_FNMRBM1h";
+        const subscribeClient = supabase.createClient(SUPABASE_URL, SUBSCRIBE_KEY);
+
+        // Modal controls
+        const modalEl = document.getElementById('modal');
+        const modalEmail = document.getElementById('modal-email');
+        const modalSubmit = document.getElementById('modal-submit');
+        const modalStatus = document.getElementById('modal-status');
+
+        function openModal() {
+            if (!modalEl) return;
+            modalEl.classList.remove('hidden');
+            modalEl.classList.add('flex');
+            if (modalEmail) modalEmail.focus();
+        }
+        function closeModal() {
+            if (!modalEl) return;
+            modalEl.classList.add('hidden');
+            modalEl.classList.remove('flex');
+            if (modalStatus) { modalStatus.textContent = ""; modalStatus.style.color = ""; }
+            if (modalSubmit) { modalSubmit.disabled = false; modalSubmit.textContent = "Subscribe Free"; }
+        }
+
+        // Click outside to close
+        if (modalEl) {
+            modalEl.addEventListener('click', (e) => {
+                if (e.target === modalEl) closeModal();
+            });
+        }
+
+        // Subscribe handler
+        if (modalSubmit) {
+            modalSubmit.addEventListener('click', async () => {
+                const email = (modalEmail && modalEmail.value ? modalEmail.value.trim() : "");
+                if (!email || !email.includes('@')) {
+                    modalStatus.textContent = "Please enter a valid email.";
+                    modalStatus.style.color = "#dc2626";
+                    return;
+                }
+                modalSubmit.disabled = true;
+                modalSubmit.textContent = "Processing...";
+                modalStatus.textContent = "";
+
+                const { error } = await subscribeClient.from('subscribers').insert([{ email }]);
+
+                if (error) {
+                    // 23505 = unique violation (already subscribed)
+                    if (error.code === '23505') {
+                        modalStatus.textContent = "You are already subscribed!";
+                        modalStatus.style.color = "#2563eb";
+                    } else {
+                        modalStatus.textContent = "Error. Try again.";
+                        modalStatus.style.color = "#dc2626";
+                    }
+                    modalSubmit.disabled = false;
+                    modalSubmit.textContent = "Subscribe Free";
+                    return;
+                }
+
+                modalStatus.textContent = "Subscribed!";
+                modalStatus.style.color = "#16a34a";
+                if (modalEmail) modalEmail.value = "";
+                setTimeout(closeModal, 1200);
+            });
+        }
+
 
         // --- NEW (Option B): Realtime subscription handle ---
         let realtimeChannel = null;
