--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -621,7 +621,7 @@
 
         // 1. AI Button
         if (item.ai_analysis) {
-             buttonsHtml += `<a href="/analysis/?id=${item.id}" class="ai-link">⚡ INTELLIGENCE</a>`;
+             buttonsHtml += `<a href="/analysis/?id=${item.id}" class="ai-link">⚡ POLICY BRIEF</a>`;
         }
 
         // 2. Doc Link
