--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     .dropdown-content a:hover { background-color: #eff6ff; color: var(--brand-primary); }
 
     /* --- HERO SECTION --- */
-    .hero { text-align: center; padding: 100px 0 0px; position: relative; }
+    .hero { text-align: center; padding: 40px 0 0px; position: relative; }
     
     .hero h1 { 
         font-family: 'Merriweather', serif;
@@ -413,6 +413,7 @@
         </div>
         <div><span class="check">✓</span> Auto-detects <strong>Advance Notices</strong> (items not yet filed with the Clerk).</div>
         <div><span class="check">✓</span> <strong>Instant email alerts</strong> directly to you for free.</div>
+        <div><span class="check">✓</span> <strong>Automatic Policy Briefs</strong> for every bill as it's announced.</div>
       </div>
       
       <div class="form-wrapper">
