--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://thecapitolwire.com/" />
   <meta property="og:title" content="The Capitol Wire | Real-Time House Floor Alerts" />
-  <meta property="og:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the U.S. House floor. Track Congress in real-time." />
+  <meta property="og:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule. Track Congress in real-time." />
   <meta property="og:image" content="https://thecapitolwire.com/preview-image.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="The Capitol Wire | Real-Time House Floor Alerts" />
-  <meta name="twitter:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the U.S. House floor." />
+  <meta name="twitter:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule." />
   <meta name="twitter:image" content="https://thecapitolwire.com/preview-image.png" />
   
   <link rel="icon" href="data:image/svg+xml,...">
