--- a/index.html
+++ b/index.html
@@ -11,23 +11,19 @@
   </script>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Capitol Wire | Real-Time Alerts for the House Floor</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Capitol Wire | Real-Time House Floor Alerts</title>
   
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://thecapitolwire.com/" />
   <meta property="og:title" content="The Capitol Wire | Real-Time House Floor Alerts" />
-  <meta property="og:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule. Track Congress in real-time." />
-  <meta property="og:image" content="https://thecapitolwire.com/preview-image.png" />
+  <meta property="og:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule. Track Congress in real-time - 100% Free." />
+  <meta property="og:image" content="https://emojiguide.org/images/emoji/f/1wfkzqn103691f.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="The Capitol Wire | Real-Time House Floor Alerts" />
-  <meta name="twitter:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule." />
-  <meta name="twitter:image" content="https://thecapitolwire.com/preview-image.png" />
+  <meta name="twitter:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule - 100% Free." />
+  <meta name="twitter:image" content="https://emojiguide.org/images/emoji/f/1wfkzqn103691f.png" />
   
-  <link rel="icon" href="data:image/svg+xml,...">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏛️</text></svg>">
   
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
