--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     .footer-links { margin-top: 20px; display: flex; justify-content: center; gap: 24px; }
 
     @media (max-width: 768px) { 
-        .hero h1 { font-size: 2.2rem; }
+        .hero h1 { font-size: 1.75rem; line-height: 1.3; } /* Smaller and tighter */
         .form-wrapper { flex-direction: column; padding: 0; }
         input { width: 100%; margin-bottom: 10px; }
         button.form-btn { width: 100%; }
