--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://thecapitolwire.com/" />
   <meta property="og:title" content="The Capitol Wire | Real-Time House Floor Alerts" />
   <meta property="og:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule. Track Congress in real-time - 100% Free." />
-  <meta property="og:image" content="https://emojiguide.org/images/emoji/f/1wfkzqn103691f.png" />
+  <meta property="og:image" content="https://www.house.gov/sites/default/files/styles/large/public/2023-01/Floor%20Proceedings.png?itok=T_iZbYy6" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="The Capitol Wire | Real-Time House Floor Alerts" />
