--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -17,12 +17,12 @@
   <meta property="og:url" content="https://thecapitolwire.com/" />
   <meta property="og:title" content="🏛️ The Capitol Wire | Real-Time House Floor Alerts" />
   <meta property="og:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule. Track Congress in real-time - 100% Free." />
-  <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Capitol_Building_Full_View.jpg/1200px-Capitol_Building_Full_View.jpg" />
+  <meta property="og:image" content="https://www.house.gov/sites/default/files/styles/large/public/2023-01/Floor%20Proceedings.png?itok=T_iZbYy6" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="🏛️ The Capitol Wire | Real-Time House Floor Alerts" />
   <meta name="twitter:description" content="Instant email alerts and automatic policy briefs for every bill as it hits the House Schedule - 100% Free." />
-  <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Capitol_Building_Full_View.jpg/1200px-Capitol_Building_Full_View.jpg" />
+  <meta name="twitter:image" content="https://www.house.gov/sites/default/files/styles/large/public/2023-01/Floor%20Proceedings.png?itok=T_iZbYy6" />
   
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏛️</text></svg>">
   
