--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
           stat.textContent = "Confirmed. You are now tracking the floor.";
           stat.style.color = "#16a34a"; input.value = ""; btn.textContent = "Success";
           setTimeout(() => {
-              btn.disabled = false; btn.textContent = "Subscribe Colleague"; stat.textContent = "";
+              btn.disabled = false; btn.textContent = "Subscribe a Colleague"; stat.textContent = "";
           }, 3000);
       }
     });
