--- a/analysis/index.html
+++ b/analysis/index.html
@@ -400,7 +400,7 @@
                              <div class="border-t border-slate-100 pt-2 mt-1">
                                  <div class="text-[10px] font-bold text-slate-400 uppercase tracking-wider mb-0.5">Verify: Look for text...</div>
                                  <div class="text-xs text-slate-600 italic font-medium font-serif bg-slate-50 p-1.5 rounded text-opacity-90">
-                                    "${v.verify || "..."}"
+                                    "${v.verify_text || "..."}"
                                  </div>
                              </div>
                         </div>
