--- a/analysis/index.html
+++ b/analysis/index.html
@@ -140,7 +140,7 @@
                              <h3 class="text-sm font-bold text-slate-900 uppercase tracking-wide">🔍 Verification Guide</h3>
                              <span class="bg-slate-200 text-slate-600 text-[9px] font-bold px-1.5 py-0.5 rounded">BETA</span>
                          </div>
-                         <p class="text-xs text-slate-500 mb-5 font-medium">Don't trust AI? Use these specific citations to audit the bill text yourself.</p>
+                         <p class="text-xs text-slate-500 mb-5 font-medium">Don't trust AI? Neither do I. Use these specific citations to audit the bill text yourself.</p>
                          <div id="verification-list" class="grid grid-cols-1 gap-4"></div>
                     </div>
                 </div>
