--- a/analysis/index.html
+++ b/analysis/index.html
@@ -140,7 +140,7 @@
                                  <h3 class="text-xs font-bold text-slate-900 uppercase tracking-wide">🔍 Verification Guide</h3>
                                  <span class="bg-slate-200 text-slate-600 text-[9px] font-bold px-1.5 py-0.5 rounded border border-slate-300">BETA</span>
                              </div>
-                             <p class="text-[10px] text-slate-500 font-medium hidden md:block">Specific citations to audit the bill text yourself.</p>
+                             <p class="text-[10px] text-slate-500 font-medium hidden md:block">Don't trust AI? Don't worry, neither do I. Verify the claims yourself.</p>
                          </div>
                          <div id="verification-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3"></div>
                     </div>
