--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
             <a href="#cat-rule">Rules</a>
           </div>
         </div>
+        <a href="/about.html" class="nav-link">About</a>
         <a href="dashboard/" class="nav-link">Dashboard</a>
         <a href="#hero" class="sub-btn">Get Alerts</a>
       </div>
