--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
   <header class="bg-white border-b border-slate-200 pt-16 pb-12 px-6 text-center">
       <div class="max-w-3xl mx-auto">
           <h1 class="text-3xl md:text-5xl font-bold text-slate-900 mb-6 leading-tight serif">
-              Legislative intelligence for the modern staffer.
+              About The Capitol Wire
           </h1>
           <p class="text-lg md:text-xl text-slate-600 leading-relaxed font-light">
               Why I built an AI to read Congress so you don't have to.
@@ -62,30 +62,30 @@
                 <div class="w-10 h-10 bg-blue-50 rounded-lg flex items-center justify-center text-xl mb-4">💸</div>
                 <h3 class="text-lg font-bold text-slate-900 mb-3 serif">Why is this free?</h3>
                 <p class="text-slate-600 leading-relaxed text-sm">
-                    Because I'm not trying to sell you a $20,000 subscription. The data is public, the hosting is cheap, and I had time on vacation to make it. No ads, no tracking, no catch.
+                    Because I'm not trying to sell you a $20,000 subscription. The data is public, the hosting is cheap, and I had time on vacation to make it.
                 </p>
             </div>
             <div class="bg-white p-8 rounded-xl border border-slate-200 shadow-sm hover:border-blue-200 transition-colors">
                 <div class="w-10 h-10 bg-blue-50 rounded-lg flex items-center justify-center text-xl mb-4">🛠️</div>
                 <h3 class="text-lg font-bold text-slate-900 mb-3 serif">Why I built it</h3>
                 <p class="text-slate-600 leading-relaxed text-sm">
-                    It honestly blew my mind there wasn't already an automated system to parse this instantly. We shouldn't have to manually hunt for information that is digitally available.
+                    It honestly blew my mind there wasn't already an automated system to parse it instantly. We shouldn't have to manually hunt for information that is digitally available.
                 </p>
             </div>
         </div>
 
         <div class="bg-slate-900 rounded-2xl p-8 md:p-12 text-white relative overflow-hidden">
-            <div class="relative z-10 max-w-3xl mx-auto text-center">
-                <h2 class="text-2xl md:text-3xl font-bold mb-6 serif">A Force Multiplier</h2>
-                <p class="text-slate-300 text-lg leading-relaxed mb-8 font-light">
-                    This bot isn't here to replace the Legislative Assistant. It's here to keep you from drowning. Reading a bill and actually understanding its political impacts are two very different things.
+            <div class="relative z-10 max-w-3xl mx-auto text-center space-y-6">
+                <h2 class="text-2xl md:text-3xl font-bold mb-2 serif">A Force Multiplier</h2>
+                <p class="text-slate-300 text-lg leading-relaxed font-light">
+                    This bot isn't here to replace the Legislative Assistant. It's here to keep you from drowning. Reading a bill and actually understanding its political impacts are two very different things. AI is already pretty good at reading 800 pages of bill text in 30 seconds.
                 </p>
-                <div class="bg-white/10 backdrop-blur-sm border border-white/10 rounded-lg p-6 text-left inline-block">
-                    <p class="text-sm font-semibold text-blue-200 uppercase tracking-wider mb-2">The Verification Promise</p>
-                    <p class="text-slate-200 leading-relaxed">
-                        "I’ve prompted the model to look for specific staffer concerns: effective dates, appropriations triggers, and procedural rules. It generates a <span class="text-white font-bold underline decoration-blue-400 decoration-2 underline-offset-2">Verification Guide</span> with specific page numbers for every claim because you should never trust what AI tells you—verify it."
-                    </p>
-                </div>
+                <p class="text-slate-300 text-lg leading-relaxed font-light">
+                    This tool is designed to be a force multiplier. It sets you up to succeed and gives you more time to focus on doing just that.
+                </p>
+                <p class="text-slate-300 text-lg leading-relaxed font-light">
+                    I’ve prompted the model to look for specific "staffer" concerns: effective dates, appropriations triggers, and procedural rules. It generates a <span class="text-white font-bold">Verification Guide</span> with specific page numbers for every claim because you should never trust what someone else or AI tells you is true—verify it.
+                </p>
             </div>
             <div class="absolute top-0 right-0 -mt-10 -mr-10 w-64 h-64 bg-blue-600 rounded-full blur-3xl opacity-20"></div>
         </div>
